[project]
name = "comfyui-tab-handler"
description = "Intercepts the Tab key to switch between textarea"
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/Haoming02/comfyui-tab-handler"

[tool.comfy]
PublisherId = "haoming02"
DisplayName = "Tab Handler"
Icon = ""
